--- a/app/src/main/res/drawable-v24/custom_input_et.xml
+++ b/app/src/main/res/drawable-v24/custom_input_et.xml
@@ -3,9 +3,9 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/black"/>
+            <solid android:color="@android:color/transparent"/>
             <corners android:radius="5dp"/>
-            <stroke android:color="@android:color/white" android:width="3dp"/>
+            <stroke android:color="@color/grey" android:width="0.1dp"/>
         </shape>
     </item>
 
