--- a/app/src/main/res/layout/activity_add_room.xml
+++ b/app/src/main/res/layout/activity_add_room.xml
@@ -4,6 +4,156 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".AddRoomActivity">
+
+    <ProgressBar
+        android:id="@+id/pv_login"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:indeterminateTint="@color/red"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_back_ar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/back_icon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Room"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tv_back_ar"
+        android:layout_marginTop="11.6dp"
+        android:layout_marginStart="20dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_ar"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_back_ar"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Room Background"
+            android:layout_gravity="center"
+            android:drawableStart="@drawable/add_photo_icon"/>
+
+        <ImageView
+            android:id="@+id/iv_bg_ar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
+    </androidx.cardview.widget.CardView>
+
+    <EditText
+        android:id="@+id/et_name_cp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/custom_input_et"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_ar"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="Room Name"
+        android:padding="10dp"
+        android:textColor="@color/black"/>
+
+    <EditText
+        android:id="@+id/et_type_cp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/custom_input_et"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/et_name_cp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="Room Type"
+        android:padding="10dp"
+        android:textColor="@color/black"/>
+    <EditText
+        android:id="@+id/et_floor_cp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/custom_input_et"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/et_type_cp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="Room Floor"
+        android:padding="10dp"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:id="@+id/tv_sg"
+        app:layout_constraintTop_toBottomOf="@id/et_floor_cp"
+        app:layout_constraintRight_toLeftOf="@id/cv_la"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:textSize="20sp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_la"
+        app:layout_constraintTop_toBottomOf="@id/et_floor_cp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/red">
+
+        <ImageButton
+            android:id="@+id/btn_sub_ar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/arrow_icon"
+            android:background="@color/red"
+            />
+
+    </androidx.cardview.widget.CardView>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loginlot"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_la"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:lottie_rawRes="@raw/addroomlot"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
