--- a/app/src/main/res/layout/room_fragment.xml
+++ b/app/src/main/res/layout/room_fragment.xml
@@ -48,6 +48,12 @@
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_dash"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        app:layout_constraintTop_toBottomOf="@id/loginlot"/>
+
 
 
 
