--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="190dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
     android:background="@color/white"
     android:layout_margin="5dp"
+    android:id="@+id/cv_ri"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
