--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF5C58</color>
     <color name="grey">#AAA4AA</color>
+    <color name="green">#2FDD92</color>
 </resources>
