--- a/app/src/main/res/layout/activity_selected_week.xml
+++ b/app/src/main/res/layout/activity_selected_week.xml
@@ -49,6 +49,12 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_sw"
+        android:layout_width="match_parent"
+        android:layout_height="700dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_la"/>
+
 
 
 
