--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -15,6 +15,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ProgressBar
+                android:id="@+id/pv_login"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:visibility="gone"
+                android:indeterminateTint="@color/red"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl1"
                 android:layout_width="match_parent"
@@ -33,55 +44,53 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="10dp"/>
                 <TextView
+                    android:id="@+id/tv_title_ae"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Create Event"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/tv_back_cp"
-                    android:layout_marginTop="18dp"
-                    android:textSize="28sp"
+                    android:layout_marginTop="20dp"
+                    android:textSize="20sp"
                     android:fontFamily="sans-serif"
                     android:textStyle="bold"
                     android:layout_marginStart="20dp"/>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_cp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:cardCornerRadius="50dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    app:cardBackgroundColor="@color/red">
-
-                    <ImageButton
-                        android:id="@+id/edit_profile"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/arrow_icon"
-                        android:background="@color/red"
-                        />
-
-                </androidx.cardview.widget.CardView>
-
-                <com.airbnb.lottie.LottieAnimationView
-                    android:id="@+id/loginlot"
-                    android:layout_width="350dp"
-                    android:layout_height="300dp"
-                    app:layout_constraintTop_toBottomOf="@id/cv_cp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:lottie_rawRes="@raw/postlot"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_iv"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:layout_constraintTop_toBottomOf="@id/cl1"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="20dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:id="@+id/iv_ae"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Photo"
+                    android:drawableStart="@drawable/add_photo_icon"
+                    android:gravity="center"
+                    android:layout_gravity="center"/>
+
+
+            </androidx.cardview.widget.CardView>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/cl1"
+                app:layout_constraintTop_toBottomOf="@id/cv_iv"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
 
@@ -101,7 +110,7 @@
                 <EditText
                     android:id="@+id/et_title_cp"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/lbl_title_cp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -109,7 +118,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/custom_input"
-                    android:hint="Title of your Post"
+                    android:hint="Title of Event"
                     android:textColor="@color/black"
                     android:padding="10dp"/>
 
@@ -129,7 +138,7 @@
                 <EditText
                     android:id="@+id/et_desc_cp"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/lbl_desc_cp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -142,68 +151,51 @@
                     android:padding="10dp"/>
 
                 <TextView
-                    android:visibility="gone"
-                    android:id="@+id/lbl_iv_cp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:fontFamily="sans-serif"
-                    android:textSize="25sp"
+                    android:id="@+id/tv_sg"
                     app:layout_constraintTop_toBottomOf="@id/et_desc_cp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="10dp"/>
-
-                <TextView
-                    android:visibility="gone"
-                    android:id="@+id/lbl_iv_dec"
+                    app:layout_constraintRight_toLeftOf="@id/cv_la"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/grey"
-                    android:fontFamily="sans-serif"
-                    android:textSize="18sp"
-                    app:layout_constraintTop_toBottomOf="@id/lbl_iv_cp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginStart="10dp"/>
+                    android:text="Submit"
+                    android:textSize="20sp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="20dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="sans-serif"/>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_iv"
-                    android:visibility="gone"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    app:layout_constraintTop_toBottomOf="@id/lbl_iv_dec"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="10dp"
-                    app:cardElevation="20dp"
+                    android:id="@+id/cv_la"
+                    app:layout_constraintTop_toBottomOf="@id/et_desc_cp"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent">
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:cardCornerRadius="50dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginTop="20dp"
+                    app:cardBackgroundColor="@color/red">
 
-                    <ImageView
-                        android:visibility="gone"
-                        android:id="@+id/iv_cp"
-                        android:scaleType="centerCrop"
+                    <ImageButton
+                        android:id="@+id/btn_submit"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-
+                        android:layout_height="match_parent"
+                        android:src="@drawable/arrow_icon"
+                        android:background="@color/red"
+                        />
 
                 </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/tv_upload"
-                    app:layout_constraintTop_toBottomOf="@id/cv_iv"
-                    android:background="@drawable/custom_input_et"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Upload Picture"
-                    android:drawableStart="@drawable/add_photo_icon"
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loginlot"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    app:layout_constraintTop_toBottomOf="@id/cv_la"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"/>
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:lottie_rawRes="@raw/postlot"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"/>
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
