--- a/app/src/main/res/layout/activity_selected_week.xml
+++ b/app/src/main/res/layout/activity_selected_week.xml
@@ -50,10 +50,34 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/rv_sw"
         android:layout_width="match_parent"
         android:layout_height="700dp"
         app:layout_constraintTop_toBottomOf="@id/cv_la"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loginlot"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_la"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:lottie_rawRes="@raw/selectedweeklot"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+    <TextView
+        android:id="@+id/tv_nosched_asw"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="No Schedule for Wednesday add one to show your schedule"
+        app:layout_constraintTop_toBottomOf="@id/loginlot"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textAlignment="center"/>
 
 
 
