--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -5,64 +5,66 @@
     android:background="@color/white"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ACADEMIC CALENDAR"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-light"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:visibility="gone"
+        android:id="@+id/cv_la"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/red">
+
+        <ImageButton
+            android:id="@+id/btn_add_ef"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:src="@drawable/add_icon"
+            android:background="@color/red"
+            />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ACADEMIC CALENDAR"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif-light"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="10dp"/>
+    </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_la"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:cardCornerRadius="50dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="10dp"
-                app:cardBackgroundColor="@color/red">
+    <CalendarView
+        android:id="@+id/calendarview_cf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
 
-                <ImageButton
-                    android:id="@+id/btn_add_ef"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/add_icon"
-                    android:background="@color/red"
-                    />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_cf"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        app:layout_constraintTop_toBottomOf="@id/calendarview_cf"/>
 
-            </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tv_add_cf"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/custom_outline_bg"
+        android:text="Add Event"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="60dp"/>
 
-            <CalendarView
-                android:id="@+id/calendarview_cf"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/cv_la"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_cf"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                app:layout_constraintTop_toBottomOf="@id/calendarview_cf"/>
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
