--- a/app/src/main/res/layout/event_item_cf.xml
+++ b/app/src/main/res/layout/event_item_cf.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/cl"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/custom_input"
+    android:background="@drawable/custom_input_et"
     android:padding="10dp"
+    android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/icon"
+        android:id="@+id/tv_ivon_ei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/info_icon"
+        android:background="@drawable/event_item_icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_title_ei_cf"
+        android:id="@+id/tv_title_ei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAMPLE TEXT"
-        android:textStyle="bold"
-        android:layout_marginStart="10dp"
-        android:fontFamily="sans-serif"
-        android:textSize="20sp"
+        android:text="Event Name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/icon"/>
+        android:textSize="18sp"
+        android:textColor="@color/red"
+        app:layout_constraintLeft_toRightOf="@id/tv_ivon_ei"
+        android:layout_marginStart="10dp"/>
 
     <TextView
+        android:id="@+id/tv_date_ei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tap to view announcement"
-        android:layout_marginStart="10dp"
-        android:fontFamily="sans-serif"
-        app:layout_constraintLeft_toRightOf="@id/icon"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_ei_cf"/>
+        android:text="08/10/1999"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_ei"
+        app:layout_constraintLeft_toRightOf="@id/tv_ivon_ei"
+        android:layout_marginStart="10dp"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
