--- a/app/src/main/res/layout/event_fragment.xml
+++ b/app/src/main/res/layout/event_fragment.xml
@@ -6,6 +6,7 @@
     android:background="@color/white">
 
     <TextView
+        android:id="@+id/tv_title_ef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="UPCOMING EVENTS!"
@@ -17,6 +18,7 @@
         android:layout_marginStart="10dp"/>
 
     <androidx.cardview.widget.CardView
+        android:visibility="gone"
         android:id="@+id/cv_la"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -36,5 +38,11 @@
             />
 
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_ef"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_title_ef"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
