--- a/app/src/main/res/layout/event_item_cf.xml
+++ b/app/src/main/res/layout/event_item_cf.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:id="@+id/cl"
+    android:id="@+id/cl1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/custom_input_et"
     android:padding="10dp"
@@ -35,6 +35,17 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title_ei"
         app:layout_constraintLeft_toRightOf="@id/tv_ivon_ei"
         android:layout_marginStart="10dp"/>
+
+    <TextView
+        android:id="@+id/tv_delete_ei"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/delete_icon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+
 
 
 
