--- a/app/src/main/res/layout/activity_selected_week.xml
+++ b/app/src/main/res/layout/activity_selected_week.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="11dp"/>
 
     <androidx.cardview.widget.CardView
+        android:visibility="gone"
         android:id="@+id/cv_la"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,7 +55,7 @@
         android:id="@+id/rv_sw"
         android:layout_width="match_parent"
         android:layout_height="700dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_la"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title_sw"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loginlot"
