--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -52,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/calendarview_cf"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_add_cf"
         android:layout_width="match_parent"
         android:layout_height="50dp"
