--- a/app/src/main/res/layout/activity_selected_week.xml
+++ b/app/src/main/res/layout/activity_selected_week.xml
@@ -53,6 +53,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
         android:id="@+id/rv_sw"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="700dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title_sw"/>
