--- a/app/src/main/res/layout/event_item_cf.xml
+++ b/app/src/main/res/layout/event_item_cf.xml
@@ -37,6 +37,7 @@
         android:layout_marginStart="10dp"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_delete_ei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
