--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:id="@+id/iv_ri"
@@ -58,6 +58,19 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_more_ri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/more_icon"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_floor_ri"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
