--- a/app/src/main/res/layout/activity_selected_week.xml
+++ b/app/src/main/res/layout/activity_selected_week.xml
@@ -38,6 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <androidx.cardview.widget.CardView
+            android:visibility="gone"
             android:id="@+id/cv_la"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
