--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -59,6 +59,17 @@
             android:layout_height="30dp"
             android:background="@drawable/info_icon"
             android:backgroundTint="@color/grey"
+            app:layout_constraintRight_toLeftOf="@id/tv_delete_si"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_delete_si"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/cross_icon"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
