--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#FF5C58</color>
     <color name="grey">#AAA4AA</color>
     <color name="green">#2FDD92</color>
+    <color name="yellow">#FFE162</color>
 </resources>
