--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -9,7 +9,6 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
@@ -20,7 +19,7 @@
             app:cardElevation="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
             android:layout_margin="10dp">
 
             <ImageView
@@ -38,7 +37,7 @@
             app:layout_constraintLeft_toRightOf="@id/cv_si"
             app:layout_constraintTop_toTopOf="parent"
             android:text="Sample text"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="12dp"
             android:layout_marginStart="10dp"
             android:textSize="18sp"/>
 
@@ -59,9 +58,9 @@
             android:layout_height="30dp"
             android:background="@drawable/info_icon"
             android:backgroundTint="@color/grey"
-            app:layout_constraintRight_toLeftOf="@id/tv_delete_si"
+            app:layout_constraintRight_toLeftOf="@id/tv_star_si"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
             android:layout_marginEnd="10dp"/>
 
         <TextView
@@ -72,8 +71,38 @@
             android:background="@drawable/cross_icon"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
             android:layout_marginEnd="20dp"/>
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_star_si"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/star_icon"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_reserve_si"
+            android:layout_marginEnd="20dp"/>
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_reserve_si"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/custom_outline_bg"
+            app:layout_constraintTop_toBottomOf="@id/cv_si"
+            android:layout_marginTop="10dp"
+            android:text="Not Available today give schedule to others"
+            android:gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"/>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
